--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Learn localStorage By Building a Todo App</title>
+  <title>Ramiro ToDo</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
   <main>
-    <h1>Todo App</h1>
+    <h1>Ramiro ToDo App</h1>
     <div class="todo-app">
       <button id="open-task-form-btn" class="btn large-btn">
         Add New Task
